# rcv_me_not_me

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
model_creation/: mnm_model.ipynb
rcv_mnm/: helpers.py  main.py  modeling.py  preprocess.py
rcv_mnm/models/: latest_finetuned_mnm_model.h5  latest_finetuned_mnm_model.tflite
rcv_mnm/resources/: labels.json
tests/: test_rcv_mnm.py
